Kafka roller will publish events to K8s when pods are restarted
Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>